--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Khronus Protocol - Alerts in the Blockchain
+description: The Khronus project was born from the need of a reliable, easy to use, decentralized set of tools for the management of time in smart contracts, specially the serving of time related alerts.
