Set theme jekyll-theme-midnight

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: pages-themes/midnight@v0.2.0
+theme: jekyll-theme-midnight
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Khronus Protocol - Alerts in the Blockchain
