--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-slate
 plugins:
 - jekyll-remote-theme
 title: Khronus Protocol
-description: https://khronus-project.github.io/documents/drafting-deploying
+description: Alerts in the Blockchain
