--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-slate
 plugins:
 - jekyll-remote-theme
 title: Khronus Protocol
-description: Alerts in the Blockchain
+description: Alerts in the Blockchain (Public Alpha Version)
